Added Forgot/Reset Password Page + Common CSS Stylesheet
- Added a forgot/reset password page.
- Added the HTML structure, CSS styling and JS script for the forgot/reset password page.
- Added Enter key functionality on the input fields.
- Added a navbar that contains a back button on the forgot/reset password page.
- Added a common CSS stylesheet which stores all of the commonly used styles across the site. I imported it onto each of the stylesheets.

--- a/pages/loginpg.html
+++ b/pages/loginpg.html
@@ -28,8 +28,7 @@
             placeholder="Password:"
             autocomplete="off"
           />
-          <!--Add link to a forgot password page-->
-          <a href="#" id="forgot-password-link">Forgot Password?</a>
+          <a href="forgot+resetpasswordpg.html" id="forgot-password-link">Forgot Password?</a>
           <button onclick="submitLogin()">Login</button>
         </div>
         <h3>Don't have an account? <a href="signuppg.html">Sign Up</a></h3>
