generational lock in

--- a/pages/loginpg.html
+++ b/pages/loginpg.html
@@ -31,12 +31,14 @@
             placeholder="Password:"
             autocomplete="off"
           />
-          <a href="forgot+resetpasswordpg.html" id="forgot-password-link">Forgot Password?</a>
-          <button onclick="submitLogin()">Login</button>
+          <a href="forgot+resetpasswordpg.html" id="forgot-password-link"
+            >Forgot Password?</a
+          >
+          <button id="login-button">Login</button>
         </div>
         <h3>Don't have an account? <a href="signuppg.html">Sign Up</a></h3>
       </div>
     </div>
+    <script src="../js/login.js"></script>
   </body>
-  <script src="../js/login.js"></script>
 </html>
