--- a/pages/forgot+resetpasswordpg.html
+++ b/pages/forgot+resetpasswordpg.html
@@ -14,7 +14,7 @@
   <body>
     <nav>
       <a href="loginpg.html" class="navbar-items">
-        <img src="../assets/back-btn.png" alt="Back" />
+        <img src="../assets/log-out-icon.svg" alt="Back" />
       </a>
     </nav>
     <div class="container">
@@ -23,7 +23,7 @@
         <h1>Really Good Password Manager</h1>
       </div>
       <div class="split-right">
-        <h2 id = "dymanic-heading">Forgot Password</h2>
+        <h2 id="dymanic-heading">Forgot Password</h2>
         <div class="forgot-password-container">
           <input
             type="text"
@@ -31,7 +31,9 @@
             placeholder="Email:"
             autocomplete="off"
           />
-          <button onclick="submitForgotPassword()" id = "forgot-password-btn">Forgot Password</button>
+          <button onclick="submitForgotPassword()" id="forgot-password-btn">
+            Forgot Password
+          </button>
           <input
             type="text"
             id="new-password-input"
@@ -44,7 +46,9 @@
             placeholder="Confirm Password:"
             autocomplete="off"
           />
-          <button onclick="submitNewPassword()" id = "new-password-btn">Submit New Password</button>
+          <button onclick="submitNewPassword()" id="new-password-btn">
+            Submit New Password
+          </button>
         </div>
       </div>
     </div>
