Added the HTML/CSS for Settings Page + Added Responsive Styling

--- a/pages/loginpg.html
+++ b/pages/loginpg.html
@@ -23,7 +23,7 @@
             autocomplete="off"
           />
           <input
-            type="text"
+            type="password"
             id="password-input"
             placeholder="Password:"
             autocomplete="off"
