Settings Page Responsiveness, JS + Login Validation Tweaks

--- a/pages/settingspg.html
+++ b/pages/settingspg.html
@@ -22,6 +22,9 @@
         <div class="setting-content">
           <p>Change your account settings here.</p>
           <h3 id="email-display">Email: lorem ipsum</h3>
+          <button id="change-email-btn" onclick="changeEmail()">
+            Change Email
+          </button>
           <button
             id="change-master-password-btn"
             onclick="changeMasterPassword()"
