--- a/pages/mainpg.html
+++ b/pages/mainpg.html
@@ -103,6 +103,7 @@
               <span class="plus" aria-hidden="true">+</span>
               <span>Add</span>
             </button>
+            <div class="accounts-section" id="accounts-section"></div>
           </section>
 
           <!-- generator page -->
@@ -130,19 +131,19 @@
 
     <!-- add password modal -->
     <div
-      class="add-password-modal"
+      class="password-modal"
       id="add-password-modal"
       role="dialog"
       aria-labelledby="modal-title"
       aria-hidden="true"
     >
-      <div class="add-password-modal-content" id="add-password-modal-content">
+      <div class="password-modal-content" id="add-password-modal-content">
         <button class="close" aria-label="Close modal">&times;</button>
 
         <h2 id="modal-title">Add New Password</h2>
 
         <form
-          class="add-pass-inputs"
+          class="pass-inputs"
           onsubmit="event.preventDefault(); addAccount();"
         >
           <div class="input-group">
@@ -186,12 +187,78 @@
       </div>
     </div>
 
+    <!-- edit password modal-->
+    <div
+      class="password-modal"
+      id="add-password-modal"
+      role="dialog"
+      aria-labelledby="modal-title"
+      aria-hidden="true"
+    >
+      <div class="password-modal-content" id="add-password-modal-content">
+        <button class="close" aria-label="Close modal">&times;</button>
+
+        <h2 id="modal-title">Add New Password</h2>
+
+        <form
+          class="pass-inputs"
+          onsubmit="event.preventDefault(); addAccount();"
+        >
+          <div class="input-group">
+            <label for="add-service-input">Service:</label>
+            <input
+              type="text"
+              class="add-service-input"
+              id="add-service-input"
+              placeholder="Service (e.g. www.amazon.com)"
+              required
+            />
+          </div>
+
+          <div class="input-group">
+            <label for="add-email-input">Email:</label>
+            <input
+              type="email"
+              class="add-email-input"
+              id="add-email-input"
+              placeholder="Email (e.g. example@email.com)"
+              required
+            />
+          </div>
+
+          <div class="input-group">
+            <label for="add-password-input">Password:</label>
+            <input
+              type="password"
+              class="add-password-input"
+              id="add-password-input"
+              placeholder="Password"
+              required
+            />
+          </div>
+
+          <button type="submit" class="modal-add-button" id="modal-add-button">
+            <span class="plus" aria-hidden="true">+</span>
+            <span>Add</span>
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <!-- base html for an account -->
     <div class="account" id="account" style="display: none">
       <img src="" class="account-icon" id="account-icon" />
       <p class="account-service" id="account-service">service</p>
       <p class="account-email" id="account-email">email</p>
-      <img src="../assets/edit-icon.svg" class="edit-icon" id="edit-icon" />
-      <img src="../assets/bin-icon.svg" class="delete-icon" id="delete-icon" />
+      <div class="account-options" id="account-options">
+        <img src="../assets/eye-icon.svg" class="eye-icon" id="eye-icon" />
+        <img src="../assets/edit-icon.svg" class="edit-icon" id="edit-icon" />
+        <img
+          src="../assets/bin-icon.svg"
+          class="delete-icon"
+          id="delete-icon"
+        />
+      </div>
     </div>
 
     <script src="../js/mainpg.js"></script>
