Settings Dark Mode + Contrast Mode Functionality

--- a/pages/settingspg.html
+++ b/pages/settingspg.html
@@ -46,12 +46,20 @@
           <div class="switch-container">
             <span class="switch-label">Dark Mode</span>
             <label class="switch">
-              <input type="checkbox" id="dark-mode-toggle" />
+              <input
+                type="checkbox"
+                id="dark-mode-toggle"
+                onclick="toggleDarkMode()"
+              />
               <span class="slider-round"></span>
             </label>
             <span class="switch-label">High Contrast Mode</span>
             <label class="switch">
-              <input type="checkbox" id="contrast-mode-toggle" />
+              <input
+                type="checkbox"
+                id="contrast-mode-toggle"
+                onclick="toggleContrastMode()"
+              />
               <span class="slider-round"></span>
             </label>
           </div>
