Enhanced UI and Settings: Navbar, Theme Modes, Redirect Logic, and Global Styling Prep
- Added navbar to login page with settings icon (linking to settings page)
- Added dark mode and contrast mode styling to the login page.
- Created a decideRedirect function in the settings script to decide where the user is directed to after they click the back button on the settings page.
- Replaced styling to body with styling to the root element of the document - best practice.
- Created a method that changes the font size of the elements on the settings page.
- Created a shared theme settings script ready for global theme implementation.

--- a/pages/settingspg.html
+++ b/pages/settingspg.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Really Good Password Manager Settings</title>
+    <script src = "../js/themeSettings.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/settings-style.css" />
     <link rel="icon" type="image/x-icon" href="../assets/site-icon.png" />
   </head>
   <body>
     <nav>
-      <a href="mainpg.html" class="navbar-items">
-        <img src="../assets/back-btn.png" alt="Back" />
+      <a href="#" class="navbar-items">
+        <img src="../assets/back-btn.png" alt="Back" onclick = "decideRedirect()" />
       </a>
     </nav>
     <div class="container">
