--- a/pages/signuppg.html
+++ b/pages/signuppg.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Really Good Password Manager Sign-Up</title>
+    <script src="../js/themeSettings.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/signup-style.css" />
     <link rel="icon" type="image/x-icon" href="../assets/site-icon.png" />
   </head>
