--- a/frontend/pages/mainpg.html
+++ b/frontend/pages/mainpg.html
@@ -93,7 +93,7 @@
           </div>
         </header>
 
-        <!-- page cntent -->
+        <!-- page content -->
         <div class="main-content-area" id="main-content-area">
           <!-- my vault page -->
           <section class="myvault-page" id="myvault-page" style="display: none">
@@ -133,6 +133,7 @@
     <div
       class="password-modal"
       id="add-password-modal"
+      style="display: none"
       role="dialog"
       aria-labelledby="modal-title"
       aria-hidden="true"
@@ -144,65 +145,7 @@
 
         <form
           class="pass-inputs"
-          onsubmit="event.preventDefault(); addAccount();"
-        >
-          <div class="input-group">
-            <label for="add-service-input">Service:</label>
-            <input
-              type="text"
-              class="add-service-input"
-              id="add-service-input"
-              placeholder="Service (e.g. www.amazon.com)"
-              required
-            />
-          </div>
-
-          <div class="input-group">
-            <label for="add-email-input">Email:</label>
-            <input
-              type="email"
-              class="add-email-input"
-              id="add-email-input"
-              placeholder="Email (e.g. example@email.com)"
-              required
-            />
-          </div>
-
-          <div class="input-group">
-            <label for="add-password-input">Password:</label>
-            <input
-              type="password"
-              class="add-password-input"
-              id="add-password-input"
-              placeholder="Password"
-              required
-            />
-          </div>
-
-          <button type="submit" class="modal-add-button" id="modal-add-button">
-            <span class="plus" aria-hidden="true">+</span>
-            <span>Add</span>
-          </button>
-        </form>
-      </div>
-    </div>
-
-    <!-- edit password modal-->
-    <div
-      class="password-modal"
-      id="add-password-modal"
-      role="dialog"
-      aria-labelledby="modal-title"
-      aria-hidden="true"
-    >
-      <div class="password-modal-content" id="add-password-modal-content">
-        <button class="close" aria-label="Close modal">&times;</button>
-
-        <h2 id="modal-title">Add New Password</h2>
-
-        <form
-          class="pass-inputs"
-          onsubmit="event.preventDefault(); addAccount();"
+          onsubmit="event.preventDefault(); handleAccountSubmit();"
         >
           <div class="input-group">
             <label for="add-service-input">Service:</label>
