--- a/frontend/pages/forgot+resetpasswordpg.html
+++ b/frontend/pages/forgot+resetpasswordpg.html
@@ -11,6 +11,7 @@
       href="../css/forgot-reset-password-style.css"
     />
     <link rel="icon" type="image/x-icon" href="../assets/site-icon.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav>
