--- a/frontend/pages/mainpg.html
+++ b/frontend/pages/mainpg.html
@@ -7,6 +7,7 @@
   <title>Really Good Password Manager</title>
   <link rel="stylesheet" type="text/css" href="../css/main-style.css" />
   <link rel="icon" type="image/x-icon" href="../assets/site-icon.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
