--- a/frontend/pages/settingspg.html
+++ b/frontend/pages/settingspg.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Really Good Password Manager Settings</title>
-    <script src = "../js/themeSettings.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/settings-style.css" />
-    <link rel="icon" type="image/x-icon" href="../assets/site-icon.png" />
-  </head>
-  <body>
-    <nav>
-      <a href="#" class="navbar-items">
-        <img src="../assets/back-btn.png" alt="Back" onclick = "decideRedirect()" />
-      </a>
-    </nav>
-    <div class="container">
-      <h1>⚙️ Settings</h1>
-      <div class="setting-box">
-        <div class="setting-title">
-          <h2>Account Settings</h2>
-        </div>
-        <div class="setting-content">
-          <p>Change your account settings here.</p>
-          <h3 id="email-display">Email: lorem ipsum</h3>
-          <button id="change-email-btn" onclick="changeEmail()">
-            Change Email
-          </button>
-          <button
-            id="change-master-password-btn"
-            onclick="changeMasterPassword()"
-          >
-            Change Master Password
-          </button>
-          <button id="log-out-btn" onclick="logOut()">Log Out</button>
-          <button id="delete-account-btn" onclick="deleteAccount()">
-            Delete Account
-          </button>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Really Good Password Manager Settings</title>
+  <script src="../js/themeSettings.js"></script>
+  <link rel="stylesheet" type="text/css" href="../css/settings-style.css" />
+  <link rel="icon" type="image/x-icon" href="../assets/site-icon.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <nav>
+    <a href="#" class="navbar-items">
+      <img src="../assets/back-btn.png" alt="Back" id = "back-btn"/>
+    </a>
+  </nav>
+  <div class="container">
+    <h1>⚙️ Settings</h1>
+    <div class="setting-box">
+      <div class="setting-title">
+        <h2>Account Settings</h2>
       </div>
-      <div class="footer">
-        <p>© 2025 | Created by Luke Eastwood and Carl Baines</p>
+      <div class="setting-content">
+        <p>Change your account settings here.</p>
+        <h3 id="email-display">Email: </h3>
+        <button id="change-email-btn">
+          Change Email
+        </button>
+        <button id="change-master-password-btn">
+          Change Master Password
+        </button>
+        <button id="log-out-btn">Log Out</button>
+        <button id="delete-account-btn">
+          Delete Account
+        </button>
       </div>
     </div>
-  </body>
-  <script src="../js/settings.js"></script>
+    <div class="footer">
+      <p>© 2025 | Created by Luke Eastwood and Carl Baines</p>
+    </div>
+  </div>
+</body>
+<script src="../js/settings.js"></script>
+
 </html>
