--- a/frontend/pages/signuppg.html
+++ b/frontend/pages/signuppg.html
@@ -7,6 +7,7 @@
     <script src="../js/themeSettings.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/signup-style.css" />
     <link rel="icon" type="image/x-icon" href="../assets/site-icon.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
