Add email retrieval and modals to settings page
Implemented backend and frontend support for retrieving the signed-in user's email, including a new /users/emails route and corresponding frontend logic. Added modal dialogs for changing email and master password in settings, updated CSS for modal styling, and standardized frontend API calls to use 127.0.0.1. Also made font usage consistent and removed unused font-face declarations.

--- a/frontend/pages/mainpg.html
+++ b/frontend/pages/mainpg.html
@@ -54,7 +54,7 @@
             <img src="../assets/user-icon.svg" class = "icon-shadow" alt="profile-icon" />
           </button>
           <button class="settings-icon" id="settings-icon" alt="settings-icon">
-            <a href="settingspg.html" target="_blank">
+            <a href="settingspg.html">
               <img src="../assets/cog-icon.svg" class = "icon-shadow" alt="settings-icon" />
             </a>
           </button>
